<resources>
    <!--Translatable strings-->
    <string-array name="navigation_array">
        <item>Map</item>
        <item>Statistics</item>
        <item>TOP 10</item>
        <item>Filters</item>
        <item>Resources</item>
        <item>Login</item>
    </string-array>

    <string-array name="types">
        <item>Forestry issues</item>
        <item>Rubbish dump</item>
        <item>Illegal building</item>
        <item>Water pollution</item>
        <item>Threat to biodiversity</item>
        <item>Poaching</item>
        <item>Other issues</item>
    </string-array>

    <string-array name="supported_languages">
        <item>Device language</item>
        <item>English</item>
        <item>Русский</item>
        <item>Українська</item>
    </string-array>

    <string name="message_you_are_logged">You are already logged in</string>
    <string name="first_name_blank">First name cannot be blank</string>
    <string name="second_name_blank">Second name cannot be blank</string>
    <string name="incorrect_email">Enter correct email</string>
    <string name="fill_all_fields">Fill all fields correctly, please</string>
    <string name="email_blank">Email cannot be blank</string>
    <string name="password_blank">Password cannot be blank</string>
    <string name="check_internet">Check internet connection please</string>
    <string name="connecting_server">Connecting Ecomap server</string>
    <string name="message_log_in_to_leave_comments">Log in to leave a comment</string>
    <string name="message_log_in_to_vote">Log in to vote for problems</string>
    <string name="message_isLiked">Vote added</string>
    <string name="message_isAlreadyLiked">You have already vote for this problem</string>
    <string name="edit_problem_fragment">Edit problem</string>

    <string name="register_if_new">New to EcoMap? Register here</string>
    <string name="want_logout">Do you really want to logout?</string>
    <string name="want_delete_problem">Do you really want to delete this problem?</string>
    <string name="want_edit_problem">Do you really want to edit this problem?</string>
    <string name="change_password">Forgot your password? Change it!</string>
    <string name="write_comment">Write a comment…</string>
    <string name="have_problem">Houston, we have a problem!</string>
    <string name="action_add_polygon">Add polygon</string>
    <string name="profile">Profile</string>
    <string name="edit_problem_activity">Edit problem</string>
    <string name="choose_location">Choose problem location</string>
    <string name="location">Location</string>
    <string name="add_photo">Add photo</string>
    <string name="send">Send</string>
    <string name="add_problem_description">Description</string>
    <string name="uploading_photo">Uploading Photo…</string>
    <string name="photos_uploaded">Photo Uploaded</string>
    <string name="uploading_error">Uploading Error</string>
    <string name="problem_title_blank">Problem title can not be blank</string>
    <string name="exit">Exit</string>
    <string name="problem_added">Problem has been successfully added</string>
    <string name="problem_edited">Problem has been successfully edited</string>

    <string name="string_added_by">"Added by: "</string>
    <string name="string_suggested_solution">Solution</string>
    <string name="string_description">Description: </string>
    <string name="add_problem_title">Title</string>
    <string name="add_problem_type">Type</string>
    <string name="add_problem_add_button">Add</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="role">Role</string>
    <string name="user">User</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sign_in">Sign in</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="post">Post</string>
    <string name="refresh_database_now">Refresh problem\'s database</string>

    <string name="problem_type_string_1">Forestry issues</string>
    <string name="problem_type_string_2">Rubbish dump</string>
    <string name="problem_type_string_3">Illegal building</string>
    <string name="problem_type_string_4">Water pollution</string>
    <string name="problem_type_string_5">Threat to biodiversity</string>
    <string name="problem_type_string_6">Poaching</string>
    <string name="problem_type_string_7">Other issues</string>

    <string name="language">Language</string>
    <string name="choose_language">Choose language</string>
    <string name="error_need_to_sign_in">Only authorized users can add problems. Please Sign In or Register</string>
    <string name="reset">Reset</string>
    <string name="ok">Okay</string>

    <string name="title_activity_view_photos">Photo viewer</string>

    <string name="notify_photos_loading">Ecomap: loading photos…</string>

    <string name="remote_service_started" translatable="false">remote_service_started</string>
    <string name="remote_service_stopped" translatable="false">remote_service_stopped</string>


    <!---->

    <!--Do not translate!-->

    <string name="app_name" translatable="false">EcoMap</string>
    <string name="shared_preferences_title" translatable="false">ecomap</string>
    <string name="fileNamePreferences" translatable="false">EcoMapPref</string>
    <string name="prefNumRevision" translatable="false">numRevision</string>
    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>
    <string name="gridview_img_description" translatable="false">Image</string>
    <string name="prefLikedProblems" translatable="false">LikedProblems</string>
    <string name="user_avatar" translatable="false">user avatar</string>

    <string name="item_map">Map</string>
    <string name="item_statistics">Statistics</string>
    <string name="item_top10">TOP 10</string>
    <string name="item_settings">Settings</string>
    <string name="item_resources">Resources</string>
    <string name="item_login">Login</string>
    <string name="item_addProblem">Add Problem</string>
    <string name="add_comment">Add your comments here</string>
    <string name="filters_menu_item_title">Filters</string>
    <string name="nav_titles_underconstraction">Under construction</string>

    <string name="day_sort">Day</string>
    <string name="week_sort">Week</string>
    <string name="month_sort">Month</string>
    <string name="year_sort">Year</string>
    <string name="reset_sort">Reset</string>
    <string name="all_sort">Summary</string>

    <string name="string_anonymous">Anonymous</string>
    <string name="nav_titles_top10">Top 10</string>

    <string name="starting_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="nav_titles_statistics">Statistics</string>
    <string name="facebook_app_id">941941442530575</string>
    <string name="google_login">Login with Google+</string>
    <string name="facebook_login">Login with Facebook</string>

    <string name="unsolved_problem">UNSOLVED</string>
    <string name="solved_problem">SOLVED</string>
    <string name="title_activity_add_problem" translatable="false">AddProblemActivity</string>
    <string name="only_my_problems">Show only my problems</string>
    <string name="delete_comment_message">Are you sure that you want to delete this comment?</string>
    <string name="image_cross">image cross</string>
    <string name="done">Done</string>
    <!---->
</resources>

