<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="org.ecomap.android.app.fragments.LoginFragment">
<!-- Login progress -->
<ProgressBar
    android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:visibility="gone" />

<ScrollView
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- LOGIN FORM start -->
    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <!-- EMAIL start -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
        <!-- EMAIL end -->

        <!-- PASSWORD start -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
        <!-- PASSWORD end -->

        <!-- LOGIN BUTTON start -->
        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            style="@style/RaisedButton"/>
        <Button
            android:id="@+id/facebook_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/facebook_login"
            android:drawableStart="@drawable/facebook_logo"
            android:drawableLeft="@drawable/facebook_logo"
            android:background="@color/com_facebook_button_background_color"
            style="@style/RaisedButton"/>
        <Button
            android:id="@+id/google_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/google_login"
            android:drawableStart="@drawable/google_logo"
            android:drawableLeft="@drawable/google_logo"
            android:background="@color/textRed"
            style="@style/RaisedButton"/>
        <!-- LOGIN BUTTON end -->

        <!--LINK TO REGISTER start -->
        <TextView android:id="@+id/link_to_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:layout_marginBottom="40dip"
            android:text="@string/register_if_new"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="#0b84aa"/>
        <!-- LINK TO REGISTER end -->

    </LinearLayout>
    <!-- LOGIN FORM end -->
</ScrollView>

</LinearLayout>

