<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddProblemFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    android:id="@+id/editProblem"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="16dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp" >

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_ratingBar"
                android:numStars="5"
                android:layout_gravity="center" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_edit_problemTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_problemTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:ems="10"
                    android:singleLine="true"
                    android:hint="@string/add_problem_title"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_edit_problemDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_problemDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:hint="@string/add_problem_description"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_edit_problemSolution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_problemSolution"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:hint="@string/string_suggested_solution"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/add_problem_type"
                android:textColor="@color/blue2" />

            <Spinner
                android:id="@+id/edit_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/types"
                android:popupBackground="@color/white"
                android:prompt="@string/add_problem_type"
                android:spinnerMode="dialog"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/divider" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/solved_problem"
                    android:textColor="@android:color/holo_green_light"
                    android:id="@+id/edit_rb_solved" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unsolved_problem"
                    android:textColor="@android:color/holo_red_light"
                    android:id="@+id/edit_rb_unsolved" />
            </RadioGroup>


        </LinearLayout>

        <com.google.android.gms.maps.MapView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            android:id="@+id/edit_littleMap"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            map:mapType="normal"
            map:liteMode="true"/>

        <Button
            android:id="@+id/edit_send_problem"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:textColor="@color/white"
            android:background="@color/blue3"
            android:layout_margin="16dp" />

    </LinearLayout>
</ScrollView>