<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/addProblem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" >

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/add_problem_title"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText1"
                android:layout_weight="1"
                android:inputType="textMultiLine"
                android:background="@drawable/edit_text_style"/>


        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#cccccc"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" >

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/add_problem_description"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText2"
                android:layout_weight="1"
                android:background="@drawable/edit_text_style"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cccccc"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" >

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/string_suggested_solution"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText3"
                android:layout_weight="1"
                android:background="@drawable/edit_text_style"/>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#cccccc"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" >

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/add_problem_type"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/types"
                android:popupBackground="@color/white"
                android:prompt="@string/add_problem_type"
                android:spinnerMode="dialog"/>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#cccccc"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp" >

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/location"/>

            <com.google.android.gms.maps.MapView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                android:id="@+id/littleMap1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                map:mapType="normal"
                map:liteMode="true"/>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#cccccc"/>

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:layout_margin="8dp"
            android:background="@drawable/dotted_border" >

            <Button
                android:id="@+id/add_photo"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/add_photo"
                android:textColor="#ff0099cc"
                android:background="@color/white"
                style="?android:attr/borderlessButtonStyle" />

        </FrameLayout>

        <org.ecomap.android.app.ui.components.NonScrollableListView
            android:id="@+id/nonScrollableListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">
        </org.ecomap.android.app.ui.components.NonScrollableListView>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#cccccc"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <Button
                android:id="@+id/send_problem"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:textColor="@color/white"
                android:background="@color/blue3"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:paddingLeft="2dp"
                android:paddingRight="2dp" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>